update my academic page

--- a/index.html
+++ b/index.html
@@ -291,10 +291,13 @@
 
       </div>
 
-      <script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=250&t=n&d=lADcEbQ2Hou9upTL6suakF_JIL8FYgA4ipDfphDjFr0'></script>
+      
+      <!-- <script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=250&t=n&d=lADcEbQ2Hou9upTL6suakF_JIL8FYgA4ipDfphDjFr0'></script> -->
 
     </div>
-
+    <a href="https://clustrmaps.com/site/1bnbw">
+        <div style="display: flex; justify-content: center; align-items: center;">Clustrmaps</div>
+    </a>
     
     <script>
 
