update my academic page

--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
 
         <!-- Awards -->
         <div class="list-item awards" data-category="awards", style="line-height: 1.2;">
-          <p class="date">2023</p> Show Lab Annual Award <br/>
+          <p class="date">2023</p> Show Lab Annual Award (4,000 SGD) <br/>
           <p class="date">2023</p> Outstanding Graduate Award (Rate < 5%) <br/>
           <p class="date">2023</p> China National Scholarship (Rate <= 0.02%) <br/>
           <p class="date">2021</p> Excellent Contributor Award (Ascend All Wisdom Plan, HUAWEI) <br/>
@@ -290,11 +290,9 @@
 
 
       </div>
-
-      
-      <!-- <script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=250&t=n&d=lADcEbQ2Hou9upTL6suakF_JIL8FYgA4ipDfphDjFr0'></script> -->
-
     </div>
+
+    <!-- <script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=250&t=n&d=lADcEbQ2Hou9upTL6suakF_JIL8FYgA4ipDfphDjFr0'></script> -->
     <a href="https://clustrmaps.com/site/1bnbw">
         <div style="display: flex; justify-content: center; align-items: center;">Clustrmaps</div>
     </a>
