--- a/index.html
+++ b/index.html
@@ -284,9 +284,9 @@
       
         <!-- Collaborators -->
         <div class="list-item coll" data-category="coll", style="line-height: 2; stext-align: center;">
-          <a href="https://www.tencent.com/en-us/"><img src='images/tencent.png' width="250"/><a/><br/>
-          <a href="https://open.youtu.qq.com/#/open"><img src='images/tencent_youtulab.png' width="250"/><a/><br/>
-            <a href="https://cemse.kaust.edu.sa/ai"><img src='images/kaust_icon.png' width="250"/><a/><br/>
+          <a href="https://www.tencent.com/en-us/" style="text-decoration: none;"><img src='images/tencent.png' width="250"/><a/><br/>
+          <a href="https://open.youtu.qq.com/#/open" style="text-decoration: none;"><img src='images/tencent_youtulab.png' width="250"/><a/><br/>
+            <a href="https://cemse.kaust.edu.sa/ai" style="text-decoration: none;"><img src='images/kaust_icon.png' width="250"/><a/><br/>
         </div>
 
 
