update my academic page

--- a/index.html
+++ b/index.html
@@ -79,13 +79,13 @@
         </div> -->
 
         <!-- Preview Videos -->
-       <!--  <div class="list-item highlight previews" data-category="highlight">
+        <div class="list-item highlight previews" data-category="highlight">
 
-          <a href="https://palm-e.github.io/"><video class="preview1" playsinline="" muted="" autoplay="" loop=""><source src="images/video-palm-e.mp4" type="video/mp4"></video></a>
-          <a href="https://say-can.github.io/"><video class="preview2" playsinline="" muted="" autoplay="" loop=""><source src="images/video-saycan.mp4" type="video/mp4"></video></a>
-          <a href="https://tossingbot.cs.princeton.edu/"><video class="preview3" playsinline="" muted="" autoplay="" loop=""><source src="images/video-tossingbot-crop.mp4" type="video/mp4"></video></a>
+          <a href="https://palm-e.github.io/"><video class="preview1" playsinline="" muted="" autoplay="" loop=""><source src="images/wukong3.mp4" type="video/mp4"></video></a>
+          <a href="https://say-can.github.io/"><video class="preview2" playsinline="" muted="" autoplay="" loop=""><source src="images/.mp4" type="video/mp4"></video></a>
+          <a href="https://tossingbot.cs.princeton.edu/"><video class="preview3" playsinline="" muted="" autoplay="" loop=""><source src="images/.mp4" type="video/mp4"></video></a>
 
-        </div> -->
+        </div>
 
         <div class="list-item highlight description" data-category="highlight", style="line-height: 1.2">
           <p class="date">2024/02</p>  One paper got accepted to CVPR 2024 <br/>
@@ -274,12 +274,12 @@
 
         <!-- Awards -->
         <div class="list-item awards" data-category="awards", style="line-height: 1.2;">
-          <p class="date">2023</p> Show Lab Annual Award (4,000 SGD) <br/>
-          <p class="date">2023</p> Outstanding Graduate Award (Rate < 5%) <br/>
-          <p class="date">2022</p> China National Scholarship (Rate <= 0.02%) <br/>
-          <p class="date">2021</p> Excellent Contributor Award (Ascend All Wisdom Plan, HUAWEI) <br/>
-          <p class="date">2021</p> China National Scholarship (Rate <= 0.02%) <br/>
-          <p class="date">2021</p> Excellent Academic Scholarship, First Class <br/>
+          <p class="year">2023</p> Show Lab Annual Award (4,000 SGD) <br/>
+          <p class="year">2023</p> Outstanding Graduate Award (Rate < 5%) <br/>
+          <p class="year">2022</p> China National Scholarship (Rate <= 0.02%) <br/>
+          <p class="year">2021</p> Excellent Contributor Award (Ascend All Wisdom Plan, HUAWEI) <br/>
+          <p class="year">2021</p> China National Scholarship (Rate <= 0.02%) <br/>
+          <p class="year">2021</p> Excellent Academic Scholarship, First Class <br/>
         </div>
       
         <!-- Collaborators -->
