--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@
         <!-- Preview Videos -->
         <div class="list-item highlight previews" data-category="highlight">
 
-          <a href="https://palm-e.github.io/"><video class="preview1" playsinline="" muted="" autoplay="" loop=""><source src="images/dragon_ball_the_end.mp4" type="video/mp4"></video></a>
-          <a href="https://say-can.github.io/"><video class="preview2" playsinline="" muted="" autoplay="" loop=""><source src="images/.mp4" type="video/mp4"></video></a>
-          <a href="https://tossingbot.cs.princeton.edu/"><video class="preview3" playsinline="" muted="" autoplay="" loop=""><source src="images/.mp4" type="video/mp4"></video></a>
+          <a href=""><video class="preview1" playsinline="" muted="" autoplay="" loop=""><source src="images/dragon_ball_the_end.mp4" type="video/mp4"></video></a>
+          <!-- <a href=""><video class="preview2" playsinline="" muted="false" autoplay="" loop=""><source src="images/zhouchu.mp4" type="video/mp4"></video></a> -->
+          <!-- <a href=""><video class="preview3" playsinline="" muted="" autoplay="" loop=""><source src="images/.mp4" type="video/mp4"></video></a> -->
 
         </div>
 
