update my academic page

--- a/index.html
+++ b/index.html
@@ -108,6 +108,8 @@
         
 
         <!-- Publications -->
+        <div class="list-item publication description" data-category="publication"><font color="49bf9"><i>&#9733; 2024 &#9733;</i></font> </div>
+
         <div class="list-item publication" data-category="publication">
           <!-- <a href="http://apc.cs.princeton.edu/" class="thumbnail"><img src="images/visorgpt_title.png" alt="" /></a> -->
           <div class="project-description">
@@ -135,6 +137,7 @@
           </div>
         </div>
 
+        <div class="list-item publication description" data-category="publication"><font color="49bf9"><i>&#9733; 2023 &#9733;</i></font> </div>
         <div class="list-item publication" data-category="publication">
           <!-- <a href="http://apc.cs.princeton.edu/" class="thumbnail"><img src="images/visorgpt_title.png" alt="" /></a> -->
           <div class="project-description">
@@ -167,6 +170,7 @@
         </div>
 
         <div class="list-item publication" data-category="publication">
+
           <!-- <a href="http://apc.cs.princeton.edu/" class="thumbnail"><img src="images/visorgpt_title.png" alt="" /></a> -->
           <div class="project-description">
           <h3><a href="https://arxiv.org/abs/2307.10816">BoxDiff: Text-to-Image Synthesis with Training-Free Box-Constrained Diffusion</a></h3>
@@ -181,6 +185,7 @@
           </div>
         </div>
 
+        <div class="list-item publication description" data-category="publication"><font color="49bf9"><i>&#9733; 2022 &#9733;</i></font> </div>
         <div class="list-item publication" data-category="publication">
           <!-- <a href="http://apc.cs.princeton.edu/" class="thumbnail"><img src="images/visorgpt_title.png" alt="" /></a> -->
           <div class="project-description">
