--- a/index.html
+++ b/index.html
@@ -290,7 +290,8 @@
         <div class="list-item coll" data-category="coll", style="line-height: 2; stext-align: center;">
           <a href="https://www.tencent.com/en-us/"><img src='images/tencent.png' width="250"/><a/><br/>
           <a href="https://open.youtu.qq.com/#/open"><img src='images/tencent_youtulab.png' width="250"/><a/><br/>
-            <a href="https://cemse.kaust.edu.sa/ai"><img src='images/kaust_icon.png' width="250"/><a/><br/>
+          <a href="https://cemse.kaust.edu.sa/ai"><img src='images/kaust_icon.png' width="250"/><a/><br/>
+          <video src="https://www.bilibili.com/video/BV12D4y1S7KL/?spm_id_from=autoNext&vd_source=71711ae2ddfd919b45d8b03541a7d2e3" controls></video>
         </div>
 
 
