update my academic page

--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
         <!-- <button class="button" data-filter="*">Show All</button> -->
         <button class="button is-checked" data-filter=".highlight">Recent News</button>
         <button class="button" data-filter=".publication">Research</button>
-        <button class="button" data-filter=".coll">Collaborators</button>
         <button class="button" data-filter=".awards">Awards</button>
+        <button class="button" data-filter=".coll">Collaborators</button>
       </div>
 
       <div class="grid">
@@ -291,7 +291,7 @@
           <a href="https://www.tencent.com/en-us/"><img src='images/tencent.png' width="250"/><a/><br/>
           <a href="https://open.youtu.qq.com/#/open"><img src='images/tencent_youtulab.png' width="250"/><a/><br/>
           <a href="https://cemse.kaust.edu.sa/ai"><img src='images/kaust_icon.png' width="250"/><a/><br/>
-          <video src="https://www.bilibili.com/video/BV12D4y1S7KL/?spm_id_from=autoNext&vd_source=71711ae2ddfd919b45d8b03541a7d2e3" controls></video>
+          <video src="https://www.youtube.com/watch?v=ORN1rFN7fgE" controls></video>
         </div>
 
 
