update my academic page

--- a/index.html
+++ b/index.html
@@ -297,7 +297,8 @@
 
          <!-- text-align: center; -->
         <div class="list-item musics" data-category="musics", style="line-height: 2;">
-         
+          
+          <div class="musics description" data-category="musics">My favorite singer is "Liang Bo", and I would be delighted to recommend some of his songs to you.</div>
           <!-- YouTube 视频的容器 -->
           <div id="player1"></div>
           <div id="player2"></div>
