--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <div id="intro-text">
           <h1>Jinheng XIE</h1>
           <p>
-            Hi, there! I'm Jinheng, a PhD student at <a href="https://sites.google.com/view/showlab">Show Lab, National University of Singapore</a>, working with Prof. <a href="https://scholar.google.com/citations?user=h1-3lSoAAAAJ&hl=zh-CN">Mike Shou</a>. My research interests focus on multi-modal computer vision. Previously, I enthusiastically worked on label-efficient learning of scene understanding (object localization and segmentation in un/weakly-supervised manners). Currently, I'm currently exploring multi-modal pre-training and generation such as generative pre-training and text-to-image generation. 
+            Hi, there! I'm Jinheng, a PhD student at <a href="https://sites.google.com/view/showlab">Show Lab, National University of Singapore</a>, working with Prof. <a href="https://scholar.google.com/citations?user=h1-3lSoAAAAJ&hl=zh-CN">Mike Shou</a>. My research interests focus on multi-modal computer vision. Previously, I enthusiastically worked on label-efficient learning of scene understanding (object localization and segmentation in un/weakly-supervised manners). I'm currently exploring multi-modal pre-training and generation such as generative pre-training and text-to-image generation. 
             <br>
             <a href="https://scholar.google.com/citations?user=smbRMokAAAAJ&hl=en">Google Scholar</a>&nbsp;&nbsp;&nbsp;&nbsp;
             <a href="https://github.com/Sierkinhane">Github</a>&nbsp;&nbsp;&nbsp;&nbsp;
