--- a/index.html
+++ b/index.html
@@ -358,9 +358,10 @@
     </div>
 
     <!-- <script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=250&t=n&d=lADcEbQ2Hou9upTL6suakF_JIL8FYgA4ipDfphDjFr0'></script> -->
-    <a href="https://clustrmaps.com/site/1bnbw">
-        <div style="display: flex; justify-content: center; align-items: center;">Clustrmaps</div>
-    </a>
+    <!-- <a href="https://clustrmaps.com/site/1bnbw"> -->
+        <!-- <div style="display: flex; justify-content: center; align-items: center;">Clustrmaps</div> -->
+    <!-- </a> -->
+    <a href="https://clustrmaps.com/site/1bnbw"  title="Visit tracker"><img src="//www.clustrmaps.com/map_v2.png?d=lADcEbQ2Hou9upTL6suakF_JIL8FYgA4ipDfphDjFr0&cl=ffffff" /></a>
     
     <script>
 
