--- a/index.html
+++ b/index.html
@@ -361,8 +361,9 @@
     <!-- <a href="https://clustrmaps.com/site/1bnbw"> -->
         <!-- <div style="display: flex; justify-content: center; align-items: center;">Clustrmaps</div> -->
     <!-- </a> -->
+    <div style="display: flex; justify-content: center; align-items: center;">
     <a href="https://clustrmaps.com/site/1bnbw"  title="Visit tracker"><img src="//www.clustrmaps.com/map_v2.png?d=lADcEbQ2Hou9upTL6suakF_JIL8FYgA4ipDfphDjFr0&cl=ffffff" /></a>
-    
+    </div>
     <script>
 
       // Isotope grid.
