--- a/index.html
+++ b/index.html
@@ -114,6 +114,21 @@
         <div class="list-item publication" data-category="publication">
           <!-- <a href="http://apc.cs.princeton.edu/" class="thumbnail"><img src="images/visorgpt_title.png" alt="" /></a> -->
           <div class="project-description">
+          <h3><a href="">Cross-Attention Makes Inference Cumbersome in Text-to-Image Diffusion Models</a></h3>
+          <p>
+            Wentian Zhang<sup>*</sup>, Haozhe Liu<sup>*</sup>, Jinheng Xie, Francesco Faccio, Mike Zheng Shou, Jürgen Schmidhuber
+            <br>
+            <i>arXiv preprint arXiv:2404.02747</i><br>
+              <a href="https://arxiv.org/abs/2404.02747">PDF</a>&nbsp;&nbsp;&bull;&nbsp;&nbsp;
+              <a href="https://github.com/HaozheLiu-ST/T-GATE">Code</a>
+            <!-- <font color="49bf9"><i>&#9733; 3rd Place, Amazon Robotics Challenge 2016 &#9733;</i></font><br> -->
+          </p>
+          </div>
+        </div>
+
+        <div class="list-item publication" data-category="publication">
+          <!-- <a href="http://apc.cs.princeton.edu/" class="thumbnail"><img src="images/visorgpt_title.png" alt="" /></a> -->
+          <div class="project-description">
           <h3><a href="">Tune-An-Ellipse: CLIP Has Potential to Find What You Want</a></h3>
           <p>
             Jinheng Xie, Songhe Deng, Bing Li, Haozhe Liu, Yawen Huang, Yefeng Zheng, Jürgen Schmidhuber, Bernard Ghanem, Linlin Shen, Mike Zheng Shou
