--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         <div class="list-item publication" data-category="publication">
           <!-- <a href="http://apc.cs.princeton.edu/" class="thumbnail"><img src="images/visorgpt_title.png" alt="" /></a> -->
           <div class="project-description">
-          <h3><a href="">Cross-Attention Makes Inference Cumbersome in Text-to-Image Diffusion Models</a></h3>
+          <h3><a href="https://arxiv.org/abs/2404.02747">Cross-Attention Makes Inference Cumbersome in Text-to-Image Diffusion Models</a></h3>
           <p>
             Wentian Zhang<sup>*</sup>, Haozhe Liu<sup>*</sup>, Jinheng Xie, Francesco Faccio, Mike Zheng Shou, Jürgen Schmidhuber
             <br>
