--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
           <div class="project-description">
           <h3><a href="https://arxiv.org/abs/2404.02747">Cross-Attention Makes Inference Cumbersome in Text-to-Image Diffusion Models</a></h3>
           <p>
-            Wentian Zhang<sup>*</sup>, Haozhe Liu<sup>*</sup>, Jinheng Xie, Francesco Faccio, Mike Zheng Shou, Jürgen Schmidhuber
+            Wentian Zhang<sup>*</sup>, Haozhe Liu<sup>*</sup>, Jinheng Xie<sup>*</sup>, Francesco Faccio, Mike Zheng Shou, Jürgen Schmidhuber
             <br>
             <i>arXiv preprint arXiv:2404.02747</i><br>
               <a href="https://arxiv.org/abs/2404.02747">PDF</a>&nbsp;&nbsp;&bull;&nbsp;&nbsp;
