--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
           <p class="year">2023</p> Show Lab Annual Award (4,000 SGD) <br/>
           <p class="year">2023</p> Outstanding Graduate Award (Rate < 5%) <br/>
           <p class="year">2022</p> China National Scholarship (Rate <= 0.02%) <br/>
-          <p class="year">2021</p> Excellent Contributor Award (Ascend All Wisdom Plan, HUAWEI) <br/>
+          <!-- <p class="year">2021</p> Excellent Contributor Award (Ascend All Wisdom Plan, HUAWEI) <br/> -->
           <p class="year">2021</p> China National Scholarship (Rate <= 0.02%) <br/>
           <p class="year">2021</p> Excellent Academic Scholarship, First Class <br/>
         </div>
