--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           </p>
         </div>
         <div id="intro-image">
-          <img src="images/selfie_in_paris.jpg">
+          <img src="images/selfie_in_seattle.jpg">
         </div>
       </div>
 
