--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
         </div>
 
         <div class="list-item highlight description" data-category="highlight", style="line-height: 1.2">
+          <p class="date">2024/08</p>  We release a unified model, i.e., Show-o, that unifies multimodal understanding and generation in one single transformer. Code and models are available <a href="https://github.com/showlab/Show-o">here</a>. <br/>
           <p class="date">2024/02</p>  One paper got accepted to CVPR 2024 <br/>
           <p class="date">2023/12</p>  One paper got accepted by AAAI 2024 <br/>
           <p class="date">2023/09</p>  Two papers got accepted to NeurIPS 2023 <br/>
@@ -110,6 +111,21 @@
 
         <!-- Publications -->
         <div class="list-item publication description" data-category="publication"><font color="49bf9"><i>&#9733; 2024 &#9733;</i></font> </div>
+
+        <div class="list-item publication" data-category="publication">
+          <!-- <a href="http://apc.cs.princeton.edu/" class="thumbnail"><img src="images/visorgpt_title.png" alt="" /></a> -->
+          <div class="project-description">
+          <h3><a href="https://arxiv.org/abs/2404.02747">Show-o: One Single Transformer to Unify Multimodal Understanding and Generation</a></h3>
+          <p>
+            Jinheng Xie<sup>*</sup>, Weijia Mao<sup>*</sup>, Zechen Bai<sup>*</sup>, David Junhao Zhang<sup>*</sup>, Weihao Wang,  Kevin Qinghong Lin,  Yuchao Gu, Zhijie Chen,  Zhenheng Yang,  Mike Zheng Shou
+            <br>
+            <i>arXiv preprint arXiv:2404.02747</i><br>
+              <a href="https://arxiv.org/abs/2408.12528">PDF</a>&nbsp;&nbsp;&bull;&nbsp;&nbsp;
+              <a href="https://github.com/showlab/Show-o">Code</a>
+            <!-- <font color="49bf9"><i>&#9733; 3rd Place, Amazon Robotics Challenge 2016 &#9733;</i></font><br> -->
+          </p>
+          </div>
+        </div>
 
         <div class="list-item publication" data-category="publication">
           <!-- <a href="http://apc.cs.princeton.edu/" class="thumbnail"><img src="images/visorgpt_title.png" alt="" /></a> -->
