--- a/index.html
+++ b/index.html
@@ -323,7 +323,8 @@
           <a href="https://www.tencent.com/en-us/"><img src='images/tencent.png' width="250"/><a/><br/>
           <a href="https://open.youtu.qq.com/#/open"><img src='images/tencent_youtulab.png' width="250"/><a/><br/>
           <a href="https://cemse.kaust.edu.sa/ai"><img src='images/kaust_icon.png' width="250"/><a/><br/>
-
+          <a href=""><img src='images/TikTok.png' width="250"/><a/><br/>
+          <a href=""><img src='images/bytedance.png' width="250"/><a/><br/>
         </div>
 
          <!-- text-align: center; -->
