--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
         <!-- Preview Videos -->
         <div class="list-item highlight previews" data-category="highlight">
-          <a href=""><video class="preview1" playsinline="" muted="" autoplay="" loop=""><source src="images/zhouchu.mp4" type="video/mp4"></video></a>
+          <a href=""><video class="preview1" playsinline="" muted="" autoplay="" loop=""><source src="images/mrbean.mp4" type="video/mp4"></video></a>
           <!-- <a href=""><video class="preview2" playsinline="" muted="false" autoplay="" loop=""><source src="images/zhouchu.mp4" type="video/mp4"></video></a> -->
           <!-- <a href=""><video class="preview3" playsinline="" muted="" autoplay="" loop=""><source src="images/.mp4" type="video/mp4"></video></a> -->
 
