--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
         </div>
 
         <div class="list-item highlight description" data-category="highlight", style="line-height: 1.2">
+          <p class="date">2024/02</p>  <a href="https://github.com/showlab/Show-o">Show-o</a> has been accepted to ICLR 2025 <br/>
           <p class="date">2024/08</p>  We release a unified model, i.e., Show-o, that unifies multimodal understanding and generation in one single transformer. Code and models are available <a href="https://github.com/showlab/Show-o">here</a>. <br/>
           <p class="date">2024/02</p>  One paper got accepted to CVPR 2024 <br/>
           <p class="date">2023/12</p>  One paper got accepted by AAAI 2024 <br/>
@@ -119,7 +120,7 @@
           <p>
             Jinheng Xie<sup>*</sup>, Weijia Mao<sup>*</sup>, Zechen Bai<sup>*</sup>, David Junhao Zhang<sup>*</sup>, Weihao Wang,  Kevin Qinghong Lin,  Yuchao Gu, Zhijie Chen,  Zhenheng Yang,  Mike Zheng Shou
             <br>
-            <i>arXiv preprint arXiv:2408.12528</i><br>
+            <i>International Conference on Learning Representations (ICLR), 2025</i><br>
               <a href="https://arxiv.org/abs/2408.12528">PDF</a>&nbsp;&nbsp;&bull;&nbsp;&nbsp;
               <a href="https://github.com/showlab/Show-o">Code</a>
             <!-- <font color="49bf9"><i>&#9733; 3rd Place, Amazon Robotics Challenge 2016 &#9733;</i></font><br> -->
