--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
           <p>
             Jinheng Xie, Songhe Deng, Bing Li, Haozhe Liu, Yawen Huang, Yefeng Zheng, Jürgen Schmidhuber, Bernard Ghanem, Linlin Shen, Mike Zheng Shou
             <br>
-            <i>IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR), 2024 </i><br>
+            <i>IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR), 2024 (Spotlight) </i><br>
             <!-- <font color="49bf9"><i>&#9733; 3rd Place, Amazon Robotics Challenge 2016 &#9733;</i></font><br> -->
           </p>
           </div>
