--- a/index.html
+++ b/index.html
@@ -128,6 +128,21 @@
           </div>
         </div>
 
+        <div class="list-item publication" data-category="publication">
+          <!-- <a href="http://apc.cs.princeton.edu/" class="thumbnail"><img src="images/visorgpt_title.png" alt="" /></a> -->
+          <div class="project-description">
+          <h3><a href="https://arxiv.org/abs/2404.02747">Faster Diffusion via Temporal Attention Decomposition</a></h3>
+          <p>
+            Wentian Zhang<sup>*</sup>, Haozhe Liu<sup>*</sup>, Jinheng Xie<sup>*</sup>, Francesco Faccio, Mengmeng Xu, Tao Xiang, Mike Zheng Shou, Juan-Manuel Perez-Rua, Jürgen Schmidhuber
+            <br>
+            <i>Transactions on Machine Learning Research (TMLR), 2025</i><br>
+              <a href="https://arxiv.org/abs/2404.02747">PDF</a>&nbsp;&nbsp;&bull;&nbsp;&nbsp;
+              <a href="https://github.com/HaozheLiu-ST/T-GATE">Code</a>
+            <!-- <font color="49bf9"><i>&#9733; 3rd Place, Amazon Robotics Challenge 2016 &#9733;</i></font><br> -->
+          </p>
+          </div>
+        </div>
+
         <div class="list-item publication description" data-category="publication"><font color="49bf9"><i>&#9733; 2024 &#9733;</i></font> </div>
         <div class="list-item publication" data-category="publication">
           <!-- <a href="http://apc.cs.princeton.edu/" class="thumbnail"><img src="images/visorgpt_title.png" alt="" /></a> -->
