--- a/index.html
+++ b/index.html
@@ -167,6 +167,8 @@
             Jinheng Xie, Songhe Deng, Bing Li, Haozhe Liu, Yawen Huang, Yefeng Zheng, Jürgen Schmidhuber, Bernard Ghanem, Linlin Shen, Mike Zheng Shou
             <br>
             <i>IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR), 2024 (Highlight) </i><br>
+            <a href="https://openaccess.thecvf.com/content/CVPR2024/papers/Xie_Tune-An-Ellipse_CLIP_Has_Potential_to_Find_What_You_Want_CVPR_2024_paper.pdf">PDF</a>&nbsp;&nbsp;&bull;&nbsp;&nbsp;
+              <a href="https://github.com/showlab/Tune-An-Ellipse">Code</a>
             <!-- <font color="49bf9"><i>&#9733; 3rd Place, Amazon Robotics Challenge 2016 &#9733;</i></font><br> -->
           </p>
           </div>
