--- a/index.html
+++ b/index.html
@@ -88,6 +88,8 @@
         </div>
 
         <div class="list-item highlight description" data-category="highlight", style="line-height: 1.2">
+          <p class="date">2025/02</p>  Two papers got accepted to CVPR 2025 <br/>
+          <p class="date">2025/02</p>  One paper got accepted to TMLR <br/>
           <p class="date">2025/01</p>  <a href="https://github.com/showlab/Show-o">Show-o</a> has been accepted to ICLR 2025 <br/>
           <p class="date">2024/08</p>  We release a unified model, i.e., Show-o, that unifies multimodal understanding and generation in one single transformer. Code and models are available <a href="https://github.com/showlab/Show-o">here</a>. <br/>
           <p class="date">2024/02</p>  One paper got accepted to CVPR 2024 <br/>
