--- a/index.html
+++ b/index.html
@@ -134,6 +134,21 @@
         <div class="list-item publication" data-category="publication">
           <!-- <a href="http://apc.cs.princeton.edu/" class="thumbnail"><img src="images/visorgpt_title.png" alt="" /></a> -->
           <div class="project-description">
+          <h3><a href="https://arxiv.org/abs/2404.02747">CLIMS++: Cross Language Image Matching with Automatic Context Discovery for Weakly Supervised Semantic Segmentation</a></h3>
+          <p>
+            Jinheng Xie<sup>*</sup>, Songhe Deng<sup>*</sup>, Xianxu Hou, Zhaochuan Luo, Linlin Shen, Yawen Huang,  Yefeng Zheng,  Mike Zheng Shou
+            <br>
+            <i>International Journal of Computer Vision (IJCV), 2025</i><br>
+<!--               <a href="https://arxiv.org/abs/2408.12528">PDF</a>&nbsp;&nbsp;&bull;&nbsp;&nbsp;
+              <a href="https://github.com/showlab/Show-o">Code</a> -->
+            <!-- <font color="49bf9"><i>&#9733; 3rd Place, Amazon Robotics Challenge 2016 &#9733;</i></font><br> -->
+          </p>
+          </div>
+        </div>
+
+        <div class="list-item publication" data-category="publication">
+          <!-- <a href="http://apc.cs.princeton.edu/" class="thumbnail"><img src="images/visorgpt_title.png" alt="" /></a> -->
+          <div class="project-description">
           <h3><a href="https://arxiv.org/abs/2404.02747">Faster Diffusion via Temporal Attention Decomposition</a></h3>
           <p>
             Wentian Zhang<sup>*</sup>, Haozhe Liu<sup>*</sup>, Jinheng Xie<sup>*</sup>, Francesco Faccio, Mengmeng Xu, Tao Xiang, Mike Zheng Shou, Juan-Manuel Perez-Rua, Jürgen Schmidhuber
