--- a/index.html
+++ b/index.html
@@ -119,12 +119,12 @@
         <div class="list-item publication" data-category="publication">
           <!-- <a href="http://apc.cs.princeton.edu/" class="thumbnail"><img src="images/visorgpt_title.png" alt="" /></a> -->
           <div class="project-description">
-          <h3><a href="https://arxiv.org/abs/2404.02747">Show-o: One Single Transformer to Unify Multimodal Understanding and Generation</a></h3>
+          <h3><a href="https://openreview.net/pdf?id=o6Ynz6OIQ6">Show-o: One Single Transformer to Unify Multimodal Understanding and Generation</a></h3>
           <p>
             Jinheng Xie<sup>*</sup>, Weijia Mao<sup>*</sup>, Zechen Bai<sup>*</sup>, David Junhao Zhang<sup>*</sup>, Weihao Wang,  Kevin Qinghong Lin,  Yuchao Gu, Zhijie Chen,  Zhenheng Yang,  Mike Zheng Shou
             <br>
             <i>International Conference on Learning Representations (ICLR), 2025</i><br>
-              <a href="https://arxiv.org/abs/2408.12528">PDF</a>&nbsp;&nbsp;&bull;&nbsp;&nbsp;
+              <a href="https://openreview.net/pdf?id=o6Ynz6OIQ6">PDF</a>&nbsp;&nbsp;&bull;&nbsp;&nbsp;
               <a href="https://github.com/showlab/Show-o">Code</a>
             <!-- <font color="49bf9"><i>&#9733; 3rd Place, Amazon Robotics Challenge 2016 &#9733;</i></font><br> -->
           </p>
@@ -134,7 +134,7 @@
         <div class="list-item publication" data-category="publication">
           <!-- <a href="http://apc.cs.princeton.edu/" class="thumbnail"><img src="images/visorgpt_title.png" alt="" /></a> -->
           <div class="project-description">
-          <h3><a href="https://arxiv.org/abs/2404.02747">CLIMS++: Cross Language Image Matching with Automatic Context Discovery for Weakly Supervised Semantic Segmentation</a></h3>
+          <h3><a href="">CLIMS++: Cross Language Image Matching with Automatic Context Discovery for Weakly Supervised Semantic Segmentation</a></h3>
           <p>
             Jinheng Xie<sup>*</sup>, Songhe Deng<sup>*</sup>, Xianxu Hou, Zhaochuan Luo, Linlin Shen, Yawen Huang,  Yefeng Zheng,  Mike Zheng Shou
             <br>
