--- a/index.html
+++ b/index.html
@@ -116,6 +116,20 @@
         <!-- Publications -->
         <div class="list-item publication description" data-category="publication"><font color="49bf9"><i>&#9733; 2025 &#9733;</i></font> </div>
 
+         <div class="list-item publication" data-category="publication">
+          <div class="project-description">
+          <h3><a href="https://arxiv.org/abs/2506.15564">Show-o2: Improved Native Unified Multimodal Models</a></h3>
+          <p>
+            Jinheng Xie,  Zhenheng Yang,  Mike Zheng Shou
+            <br>
+            <i>arXiv preprint arXiv:2506.15564, 2025</i><br>
+              <a href="https://arxiv.org/abs/2506.15564">PDF</a>&nbsp;&nbsp;&bull;&nbsp;&nbsp;
+              <a href="https://github.com/showlab/Show-o/show-o2">Code</a>
+           
+          </p>
+          </div>
+        </div>
+        
         <div class="list-item publication" data-category="publication">
           <!-- <a href="http://apc.cs.princeton.edu/" class="thumbnail"><img src="images/visorgpt_title.png" alt="" /></a> -->
           <div class="project-description">
