--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
         </div>
 
         <div class="list-item highlight description" data-category="highlight", style="line-height: 1.2">
+          <p class="date">2025/06</p>  We release an improved native unified multimodal model, i.e., Show-o2. Code and models are available <a href="https://github.com/showlab/Show-o">here</a>. <br/>
           <p class="date">2025/03</p>  One paper got accepted to IJCV <br/>
           <p class="date">2025/02</p>  Two papers got accepted to CVPR 2025 <br/>
           <p class="date">2025/02</p>  One paper got accepted to TMLR <br/>
