--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
             <a href="https://scholar.google.com/citations?user=smbRMokAAAAJ&hl=en">Google Scholar</a>&nbsp;&nbsp;&nbsp;&nbsp;
             <a href="https://github.com/Sierkinhane">Github</a>&nbsp;&nbsp;&nbsp;&nbsp;
             <a href="https://www.linkedin.com/in/jinheng-xie-497a29290/?originalSubdomain=sg">LinkedIn</a>&nbsp;&nbsp;&nbsp;&nbsp;
+            <a href="https://x.com/Sierkinhane1">Twitter</a>&nbsp;&nbsp;&nbsp;&nbsp;
             <br><br>
             sierkinhane at gmail dot com / jinheng at u dot nus dot edu
             <br><br>
