--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
         <!-- <button class="button" data-filter="*">Show All</button> -->
         <button class="button is-checked" data-filter=".highlight">Recent News</button>
         <button class="button" data-filter=".publication">Research</button>
+        <button class="button" data-filter=".talks">Invited Talks</button>
         <button class="button" data-filter=".awards">Awards</button>
         <button class="button" data-filter=".coll">Collaborators</button>
         <button class="button" data-filter=".musics">Musics</button>
@@ -361,6 +362,14 @@
           </div>
         </div>
 
+         <!-- Invited Talks -->
+         <div class="list-item highlight description" data-category="highlight", style="line-height: 1.2">
+          <p class="date">2025/07</p>  Invited talk at Shanghai Jiao Tong University. <br/>
+          <p class="date">2025/07</p>  Gave a brief introduction to Show-o2 at MIT. <br/>
+          <p class="date">2025/04</p>  Invited talk at Zhejiang Univeristy. <br/>
+          <p class="date">2024/02</p>  Invited talk at Pensees Pte Ltd. <br/
+        </div>
+        
         <!-- Awards -->
         <div class="list-item awards" data-category="awards", style="line-height: 1.2;">
           <p class="year">2023</p> Show Lab Annual Award (4,000 SGD) <br/>
