--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
           <p class="date">2025/01</p>  <a href="https://github.com/showlab/Show-o">Show-o</a> has been accepted to ICLR 2025 <br/>
           <p class="date">2024/08</p>  We release a unified model, i.e., Show-o, that unifies multimodal understanding and generation in one single transformer. Code and models are available <a href="https://github.com/showlab/Show-o">here</a>. <br/>
           <p class="date">2024/02</p>  One paper got accepted to CVPR 2024 <br/>
-          <p class="date">2024/02</p>  Invited talk at Pensees Pte Ltd. <br/
+          <p class="date">2024/02</p>  Invited talk at Pensees Pte Ltd. <br/>
           <p class="date">2023/12</p>  One paper got accepted by AAAI 2024 <br/>
           <p class="date">2023/09</p>  Two papers got accepted to NeurIPS 2023 <br/>
           <p class="date">2023/07</p>  One paper got accepted to ACM MM 2023 <br/>
