--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
         </div>
 
         <div class="list-item highlight description" data-category="highlight", style="line-height: 1.2">
+          <p class="date">2025/07</p>  Gave a talk on Show-o series. <br/>
           <p class="date">2025/07</p>  Invited talk at Shanghai Jiao Tong University. <br/>
           <p class="date">2025/07</p>  Gave a brief introduction to Show-o2 at MIT. <br/>
           <p class="date">2025/06</p>  We release an improved native unified multimodal model, i.e., Show-o2. Code and models are available <a href="https://github.com/showlab/Show-o">here</a>. <br/>
