--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
         </div>
 
         <div class="list-item highlight description" data-category="highlight", style="line-height: 1.2">
+          <p class="date">2025/08</p>  Show-o received PREMIA Best Student Paper Awards (Excellence). <br/>
           <p class="date">2025/07</p>  Gave a talk on Show-o series. <br/>
           <p class="date">2025/07</p>  Invited talk at Shanghai Jiao Tong University. <br/>
           <p class="date">2025/07</p>  Gave a brief introduction to Show-o2 at MIT. <br/>
