--- a/index.html
+++ b/index.html
@@ -371,6 +371,8 @@
         
         <!-- Awards -->
         <div class="list-item awards" data-category="awards", style="line-height: 1.2;">
+          
+          <p class="year">2025</p> PREMIA Best Student Paper Awards (Excellence) <br/>
           <p class="year">2023</p> Show Lab Annual Award (4,000 SGD) <br/>
           <p class="year">2023</p> Outstanding Graduate Award (Rate < 5%) <br/>
           <p class="year">2022</p> China National Scholarship (Rate <= 0.02%) <br/>
