--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         </div>
 
         <div class="list-item highlight description" data-category="highlight", style="line-height: 1.2">
-          <p class="date">2025/08</p>  Show-o received PREMIA Best Student Paper Awards (Excellence). <br/>
+          <p class="date">2025/08</p>  Show-o received PREMIA Best Student Paper Award (Excellence). <br/>
           <p class="date">2025/07</p>  Gave a talk on Show-o series. <br/>
           <p class="date">2025/07</p>  Invited talk at Shanghai Jiao Tong University. <br/>
           <p class="date">2025/07</p>  Gave a brief introduction to Show-o2 at MIT. <br/>
@@ -372,7 +372,7 @@
         <!-- Awards -->
         <div class="list-item awards" data-category="awards", style="line-height: 1.2;">
           
-          <p class="year">2025</p> PREMIA Best Student Paper Awards (Excellence) <br/>
+          <p class="year">2025</p> PREMIA Best Student Paper Award (Excellence) <br/>
           <p class="year">2023</p> Show Lab Annual Award (4,000 SGD) <br/>
           <p class="year">2023</p> Outstanding Graduate Award (Rate < 5%) <br/>
           <p class="year">2022</p> China National Scholarship (Rate <= 0.02%) <br/>
