--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         </div>
 
         <div class="list-item highlight description" data-category="highlight", style="line-height: 1.2">
-          <p class="date">2025/08</p>  Show-o received PREMIA Best Student Paper Award (Excellence). <br/>
+          <p class="date">2025/01</p>  <a href="https://github.com/showlab/Show-o">Show-o2</a> has been accepted to NeurIPS 2025 <br/>
           <p class="date">2025/07</p>  Gave a talk on Show-o series. <br/>
           <p class="date">2025/07</p>  Invited talk at Shanghai Jiao Tong University. <br/>
           <p class="date">2025/07</p>  Gave a brief introduction to Show-o2 at MIT. <br/>
