--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
           <p>
             Jinheng Xie,  Zhenheng Yang,  Mike Zheng Shou
             <br>
-            <i>arXiv preprint arXiv:2506.15564, 2025</i><br>
+            <i>Thirty-ninth Conference on Neural Information Processing Systems (NeurIPS), 2025</i><br>
               <a href="https://arxiv.org/abs/2506.15564">PDF</a>&nbsp;&nbsp;&bull;&nbsp;&nbsp;
               <a href="https://github.com/showlab/Show-o/tree/main/show-o2">Code</a>
            
