--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
 
         <div class="list-item highlight description" data-category="highlight", style="line-height: 1.2">
           <p class="date">2025/09</p>  <a href="https://github.com/showlab/Show-o">Show-o2</a> has been accepted to NeurIPS 2025 <br/>
+          <p class="date">2025/07</p>  Show-o received the PREMIA Best Student Paper Award 2025. <br/>
           <p class="date">2025/07</p>  Gave a talk on Show-o series. <br/>
           <p class="date">2025/07</p>  Invited talk at Shanghai Jiao Tong University. <br/>
           <p class="date">2025/07</p>  Gave a brief introduction to Show-o2 at MIT. <br/>
@@ -145,7 +146,7 @@
           <p>
             Jinheng Xie<sup>*</sup>, Weijia Mao<sup>*</sup>, Zechen Bai<sup>*</sup>, David Junhao Zhang<sup>*</sup>, Weihao Wang,  Kevin Qinghong Lin,  Yuchao Gu, Zhijie Chen,  Zhenheng Yang,  Mike Zheng Shou
             <br>
-            <i>International Conference on Learning Representations (ICLR), 2025</i><br>
+            <i>International Conference on Learning Representations (ICLR), 2025; PREMIA Best Student Paper Award 2025.</i><br>
               <a href="https://openreview.net/pdf?id=o6Ynz6OIQ6">PDF</a>&nbsp;&nbsp;&bull;&nbsp;&nbsp;
               <a href="https://github.com/showlab/Show-o">Code</a>
             <!-- <font color="49bf9"><i>&#9733; 3rd Place, Amazon Robotics Challenge 2016 &#9733;</i></font><br> -->
