--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
         </div>
 
         <div class="list-item highlight description" data-category="highlight", style="line-height: 1.2">
+          <p class="date">2025/12</p>  I will be joining Google in New York City as an intern in 2026. <br/>
           <p class="date">2025/09</p>  <a href="https://github.com/showlab/Show-o">Show-o2</a> has been accepted to NeurIPS 2025 <br/>
           <p class="date">2025/08</p>  Show-o received the PREMIA Best Student Paper Award 2025. <br/>
           <p class="date">2025/07</p>  Gave a talk on Show-o series. <br/>
