--- a/index.html
+++ b/index.html
@@ -93,12 +93,7 @@
           <p class="date">2025/12</p>
           I will be joining 
           <span style="font-weight: bold;">
-            <span style="color:#4285F4;">G</span>
-            <span style="color:#EA4335;">o</span>
-            <span style="color:#FBBC05;">o</span>
-            <span style="color:#4285F4;">g</span>
-            <span style="color:#34A853;">l</span>
-            <span style="color:#EA4335;">e</span>
+            <span style="color:#4285F4;">G</span><span style="color:#EA4335;">o</span><span style="color:#FBBC05;">o</span><span style="color:#4285F4;">g</span><span style="color:#34A853;">l</span><span style="color:#EA4335;">e</span>
           </span>
           in New York City as an intern in 2026.
           <br/>
