--- a/index.html
+++ b/index.html
@@ -97,13 +97,13 @@
           </span>
           in New York City as an intern in 2026.
           <br/>
-          <p class="date">2025/09</p>  <a href="https://github.com/showlab/Show-o">Show-o2</a> has been accepted to NeurIPS 2025. <br/>
-          <p class="date">2025/08</p>  Show-o received the PREMIA Best Student Paper Award 2025. <br/>
-          <p class="date">2025/07</p>  Gave a talk on Show-o series. <br/>
-          <p class="date">2025/07</p>  Invited talk at Shanghai Jiao Tong University. <br/>
-          <p class="date">2025/07</p>  Gave a brief introduction to Show-o2 at MIT. <br/>
-          <p class="date">2025/06</p>  We release an improved native unified multimodal model, i.e., Show-o2. Code and models are available <a href="https://github.com/showlab/Show-o">here</a>. <br/>
-          <p class="date">2025/04</p>  Invited talk at Zhejiang Univeristy. <br/>
+          <p class="date">2025/09</p>  <a href="https://github.com/showlab/Show-o">Show-o2</a> has been accepted to NeurIPS 2025 <br/>
+          <p class="date">2025/08</p>  Show-o received the PREMIA Best Student Paper Award 2025 <br/>
+          <p class="date">2025/07</p>  Gave a talk on Show-o series <br/>
+          <p class="date">2025/07</p>  Invited talk at Shanghai Jiao Tong University <br/>
+          <p class="date">2025/07</p>  Gave a brief introduction to Show-o2 at MIT <br/>
+          <p class="date">2025/06</p>  We release an improved native unified multimodal model, i.e., Show-o2. Code and models are available <a href="https://github.com/showlab/Show-o">here</a> <br/>
+          <p class="date">2025/04</p>  Invited talk at Zhejiang Univeristy <br/>
           <p class="date">2025/03</p>  One paper got accepted to IJCV <br/>
           <p class="date">2025/02</p>  Two papers got accepted to CVPR 2025 <br/>
           <p class="date">2025/02</p>  One paper got accepted to TMLR <br/>
