--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
           <span style="font-weight: bold;">
             <span style="color:#4285F4;">G</span><span style="color:#EA4335;">o</span><span style="color:#FBBC05;">o</span><span style="color:#4285F4;">g</span><span style="color:#34A853;">l</span><span style="color:#EA4335;">e</span>
           </span>
-          in New York City as an intern in 2026.
+          in New York City as an intern in 2026
           <br/>
           <p class="date">2025/09</p>  <a href="https://github.com/showlab/Show-o">Show-o2</a> has been accepted to NeurIPS 2025 <br/>
           <p class="date">2025/08</p>  Show-o received the PREMIA Best Student Paper Award 2025 <br/>
