--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
           </div>
         </div>
 
-        <!-- <div class="list-item publication" data-category="publication">
+        <div class="list-item publication" data-category="publication">
           <!-- <a href="http://apc.cs.princeton.edu/" class="thumbnail"><img src="images/visorgpt_title.png" alt="" /></a> -->
           <div class="project-description">
           <h3><a href="https://arxiv.org/abs/2312.17492">HEAP: Unsupervised Object Discovery and Localization with Contrastive Grouping</a></h3>
@@ -239,7 +239,7 @@
               <a href="https://arxiv.org/abs/2312.17492">PDF</a>&nbsp;&nbsp;
           </p>
           </div>
-        </div> -->
+        </div>
 
         <div class="list-item publication description" data-category="publication"><font color="49bf9"><i>&#9733; 2023 &#9733;</i></font> </div>
         <div class="list-item publication" data-category="publication">
@@ -305,7 +305,7 @@
           </div>
         </div>
 
-        <!-- <div class="list-item publication" data-category="publication">
+        <div class="list-item publication" data-category="publication">
           <!-- <a href="http://apc.cs.princeton.edu/" class="thumbnail"><img src="images/visorgpt_title.png" alt="" /></a> -->
           <div class="project-description">
           <h3><a href="https://arxiv.org/abs/2209.01988">Point Beyond Class: A Benchmark for Weakly Semi-Supervised Abnormality Localization in Chest X-Rays</a></h3>
@@ -318,7 +318,7 @@
               <a href="https://github.com/HaozheLiu-ST/Point-Beyond-Class">Code</a>
           </p>
           </div>
-        </div> -->
+        </div>
 
         <div class="list-item publication" data-category="publication">
           <!-- <a href="http://apc.cs.princeton.edu/" class="thumbnail"><img src="images/visorgpt_title.png" alt="" /></a> -->
@@ -350,7 +350,7 @@
           </div>
         </div>
 
-        <!-- <div class="list-item publication" data-category="publication">
+        <div class="list-item publication" data-category="publication">
           <!-- <a href="http://apc.cs.princeton.edu/" class="thumbnail"><img src="images/visorgpt_title.png" alt="" /></a> -->
           <div class="project-description">
           <h3><a href="https://arxiv.org/abs/2203.05151">Frequency-driven Imperceptible Adversarial Attack on Semantic Similarity</a></h3>
@@ -363,7 +363,7 @@
               <a href="https://github.com/LinQinLiang/SSAH-adversarial-attack">Code</a><br>
           </p>
           </div>
-        </div> -->
+        </div>
 
         <div class="list-item publication" data-category="publication">
           <!-- <a href="http://apc.cs.princeton.edu/" class="thumbnail"><img src="images/visorgpt_title.png" alt="" /></a> -->
