--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
           <div class="project-description">
           <h3><a href="https://openreview.net/pdf?id=o6Ynz6OIQ6">Show-o: One Single Transformer to Unify Multimodal Understanding and Generation</a></h3>
           <p>
-            Jinheng Xie<sup>*</sup>, Weijia Mao<sup>*</sup>, Zechen Bai<sup>*</sup>, David Junhao Zhang<sup>*</sup>, Weihao Wang,  Kevin Qinghong Lin,  Yuchao Gu, Zhijie Chen,  Zhenheng Yang,  Mike Zheng Shou
+            Jinheng Xie, Weijia Mao, Zechen Bai, David Junhao Zhang, Weihao Wang,  Kevin Qinghong Lin,  Yuchao Gu, Zhijie Chen,  Zhenheng Yang,  Mike Zheng Shou
             <br>
             <i>International Conference on Learning Representations (ICLR), 2025</i><br>
             <i><span style="color:red;">PREMIA Best Student Paper Award 2025</span></i><br>
