--- a/index.html
+++ b/index.html
@@ -174,8 +174,8 @@
             Jinheng Xie<sup>*</sup>, Songhe Deng<sup>*</sup>, Xianxu Hou, Zhaochuan Luo, Linlin Shen, Yawen Huang,  Yefeng Zheng,  Mike Zheng Shou
             <br>
             <i>International Journal of Computer Vision (IJCV), 2025</i><br>
-<!--               <a href="https://arxiv.org/abs/2408.12528">PDF</a>&nbsp;&nbsp;&bull;&nbsp;&nbsp;
-              <a href="https://github.com/showlab/Show-o">Code</a> -->
+              <a href="https://link.springer.com/article/10.1007/s11263-025-02442-2">PDF</a>&nbsp;&nbsp;&bull;&nbsp;&nbsp;
+              <!-- <a href="https://github.com/showlab/Show-o">Code</a> -->
             <!-- <font color="49bf9"><i>&#9733; 3rd Place, Amazon Robotics Challenge 2016 &#9733;</i></font><br> -->
           </p>
           </div>
