Update internship details in index.html

--- a/index.html
+++ b/index.html
@@ -90,6 +90,13 @@
 
         <div class="list-item highlight description" data-category="highlight", style="line-height: 1.2">
           <!-- <p class="date">2025/12</p>  I will be joining Google in New York City as an intern in 2026. <br/> -->
+          <p class="date">2026/01</p>
+          Joined 
+          <span style="font-weight: bold;">
+            <span style="color:#4285F4;">G</span><span style="color:#EA4335;">o</span><span style="color:#FBBC05;">o</span><span style="color:#4285F4;">g</span><span style="color:#34A853;">l</span><span style="color:#EA4335;">e</span>
+          </span>
+          as an intern
+          <br/>
           <p class="date">2025/12</p>
           I will be joining 
           <span style="font-weight: bold;">
